--- a/themes/rcforward/sass/_404.scss
+++ b/themes/rcforward/sass/_404.scss
@@ -3,465 +3,26 @@
 --------------------------------------------------------------*/
 .page-template-404 {
   .container-404 {
+    background-image: url(../../assets/images/output-onlinepngtools.png);
+    background-size: contain;
+    background-position: 4px;
+    background-repeat: no-repeat;
+    width: 40%;
     display: flex;
     .error-text {
-      order: 2;
-      width: 60%;
+      width:50%;
+    margin-left: 9rem;
+      h2{
+        text-transform:unset;
+        font-size: 1rem;
+      }
+      p{
+          font-size: 0.9rem;
+      }
     }
     .search-girl {
-      order: 1;
-      width: 40%;
-      img {
-        max-width: 100%;
-      }
+      width: 50%;
     }
   }
 }
 
-/* Single-Post */
-.post-template-default {
-  line-height: 2rem;
-  .site-content {
-    padding: 0;
-    .post {
-      .entry-header {
-        width: 100%;
-      }
-      .entry-content {
-        padding: 2em;
-        @include desktop {
-          display: flex;
-          flex-direction: column;
-          padding-left: 8em;
-        }
-        .entry-title {
-          line-height: 1.2em;
-          .entry-meta {
-            font-size: 1.2rem;
-            color: #a7a3d6;
-            font-weight: bold;
-          }
-          h2 {
-            color: $credible__blue;
-          }
-        }
-        .entry-main {
-          @include desktop {
-            padding: 2rem;
-            width: 60%;
-          }
-          .post-quote {
-            color: $credible__blue;
-            padding: 2px;
-            line-height: 2em;
-            font-size: 1.2rem;
-            font-weight: bold;
-            font-style: italic;
-            @include tablet {
-              font-size: 2rem;
-              @include desktop {
-                line-height: 2em;
-                font-size: 2rem;
-              }
-            }
-          }
-          h3 {
-            font-size: 1.2rem;
-            font-weight: 700;
-          }
-        }
-        .entry-footer {
-          a {
-            color: $credible__blue;
-          }
-        }
-        p {
-          line-height: 1.8rem;
-        }
-      }
-    }
-  }
-} 
-/* pseudo quote */
-.post-quote {
-  &::before {
-    content: '\f10d';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: $credible__blue;
-    font-size: 20px;
-    padding: 30px;
-  }
-  &::after {
-    content: '\f10e';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: $credible__blue;
-    font-size: 20px;
-    padding: 30px;
-  }
-} 
-
-/*Main */
-.blog {
-  .site-content {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    header {
-      // height: 214px;
-      @include desktop {
-      }
-      h2 {
-        text-align: center;
-        font-size: 32px;
-        text-transform: capitalize;
-        color: $credible__blue;
-      }
-      p {
-        text-align: center;
-        font-weight: bold;
-        margin-bottom: 2rem;
-      }
-      //   img {
-      //     height: 214px;
-      //   }
-    }
-    //post-blog(header,entry-title,...
-
-    .post,
-    .blog {
-      padding: 2rem;
-      .post-blog {
-        padding: 0;
-        border: 1px solid #d7d0f2;
-        box-shadow: 0 2px 2px #42299a;
-        border: 10px;
-      }
-    }
-  }
-  .alm-btn-wrap .alm-load-more-btn {
-    height: 60px;
-    width: 160px;
-    border-radius: 6px;
-    background-color: $credible__blue;
-    &:hover {
-      background-color: $credible__blue;
-    }
-    .ajax-load-more-wrap {
-      display: flex;
-    }
-  }
-} 
-
-////////////////////////////////
-
-.blog {
-  .site-content {
-    .blog-header {
-      height: 24rem;
-      @include tablet {
-      }
-      @include desktop {
-        height: 15rem;
-        background-image: url('../../assets/images/flowimpact.png'),
-          url('../../assets/images/Impactfullygiving.png');
-        background-size: 800px, 318px;
-        background-position: top -43px left -453px, top 10px right 30px;
-        background-repeat: no-repeat no-repeat;
-        padding-bottom: 2rem;
-        padding-bottom: 18rem;
-      }
-      .impact-title {
-        h2 {
-          font-size: 2rem;
-          margin: 1rem;
-
-          @include desktop {
-            font-size: 3rem;
-            margin-bottom: 0.5rem;
-            margin-top: 7rem;
-             text-align: center;
-        text-transform: capitalize;
-        color: $credible__blue;
-          }
-        }
-        p {
-          font-size: 1rem;
-          margin-bottom: 32px;
-          @include desktop {
-            margin: 0;
-            text-align: center;
-        font-weight: bold;
-        margin-bottom: 2rem;
-          }
-        }
-      }
-      .impact-heart {
-        text-align: center;
-        img {
-          width: 334px;
-          object-fit: cover;
-        }
-      }
-    } //end of header
-    .post {
-      padding: 2rem;
-      @include tablet {
-        padding: 3rem;
-      }
-      @include desktop {
-        padding-bottom: 0rem;
-        padding-right: 12rem;
-        padding-left: 12rem;
-      }
-
-      .post-blog {
-        border: 1px solid #d7d0f2;
-        box-shadow: 0 2px 2px #42299a;
-        .entry-header {
-          img {
-            width: 100%;
-            object-fit: cover;
-            height: 100%;
-            @include desktop {
-            }
-          }
-        }
-        .entry-title {
-          padding: 10px;
-          padding-bottom: 3rem;
-          @include desktop {
-            padding-bottom: 0;
-          }
-          span {
-            font-size: 0.85rem;
-            color: #a7a3d6;
-            font-weight: 600;
-          }
-
-          h3 {
-            font-size: 1.3rem;
-            margin-top: 6px;
-            padding: 0;
-          }
-        }
-        .entry-content {
-          display: none;
-          @include desktop {
-            display: block;
-            padding: 10px;
-          }
-        }
-      }
-    } //end of article(.post)
-
-    .ajax-load-more-wrap {
-      padding-top: 3rem;
-      @include desktop {
-        padding-bottom: 0rem;
-        padding-right: 12rem;
-        padding-left: 12rem;
-      }
-
-      .alm-listing {
-        padding: 2rem;
-        @include tablet {
-          padding: 3rem;
-        }
-        @include desktop {
-          padding: 0rem;
-        }
-        li {
-          display: flex;
-          flex-wrap: wrap;
-          flex-direction: column;
-          border: 1px solid #d7d0f2;
-          box-shadow: 0 2px 2px #42299a;
-          padding: 0;
-
-          img {
-            width: 100%;
-            object-fit: cover;
-            height: 300px;
-            position: static;
-
-            @include tablet {
-              height: 500px;
-            }
-            @include desktop {
-              height: 600px;
-            }
-          }
-          h3 {
-            padding: 10px;
-            line-height: 1.5rem;
-            a {
-              font-size: 1.3rem;
-              margin-top: 6px;
-              padding: 0;
-              font-family: $montserrat__font;
-
-              p {
-              }
-            }
-          }
-          .entry-meta {
-            padding: 10px;
-          }
-          p {
-            font-size: 0.85rem;
-            padding: 10px;
-            line-height: 22px;
-            font-size: 0.85rem;
-            margin: 0;
-          }
-        }
-      }
-    } //end of .ajax-loader
-  }
-}
-
-////////////single-post
-.post-template-default {
-  .site-content {
-    .post {
-      .entry-header {
-        img {
-          width: 100%;
-
-          object-fit: cover;
-          height: 100%;
-        }
-        .entry-content {
-          padding: 2rem;
-        }
-      }
-      .entry-content {
-      }
-    }
-  }
-}
-
-.post-navigation {
-  padding: 3rem;
-  h3.more-article {
-    text-align: center;
-  }
-  .more-post {
-    @include desktop{
-      display: flex;
-      justify-content: space-around;
-    }
-    .next-post, .previous-post {
-      border: 1px solid #d7d0f2;
-      box-shadow: 0 2px 2px #42299a;
-      margin-bottom: 3rem;
-      @include desktop{
-            margin: 3rem;
-
-      }
-     
-      .next-post-image,.prev-post-image {
-        img {
-          object-fit: cover;
-          height: 100%;
-          width: 100%;
-        }
-      }
-      .next-post-content,.prev-post-content {
-        .next-post-title, .prev-post-title {
-          .next-post-meta,
-          .prev-post-meta {
-            color: #a7a3d6;
-                padding: 10px;
-          }
-          h3.entry-title {
-            padding-bottom:10px;
-                padding: 10px;
-          }
-        }
-     
-      }
-    }
-  }
-}
-
-.prev-post-main,
-.next-post-main {
-  display: none;
-}
-.pre-nav-1, .next{
-  display: none;
-}
-.impactfully {
-  @include desktop {
-    display: none;
-  }
-}
-
-//Read More Button
-.blog{
-.read-more{
-  position: relative;
-  text-align: right;
-  padding-right: 1rem;
-  font-size: 1rem;
-  padding-right: 24px;
-  padding-bottom: 15px;
-  @include desktop {
-    padding-bottom: 30px;
-  }
-  .read-more-button {
-    color: $color__link;
-    padding-bottom: 15px;
-    padding-right: 24px;
-    font-size: 1.2rem;
-  }
-    .read-more-arrow {
-    font-size: 4rem;
-    color: $color__link;
-    position: absolute;
-    bottom:-6px;
-    right: 17px;
-    @include desktop {
-      bottom: 7px;
-    }
-  }
-}
-}
-.single{
-
-.read-more{
-  position: relative;
-  text-align: right;
-  padding-right: 1rem;
-  font-size: 1rem;
-  padding-right: 24px;
-  padding-bottom: 15px;
-  @include desktop {
-    padding-bottom: 30px;
-  }
-  .read-more-button {
-    color: $color__link;
-    padding-bottom: 15px;
-    padding-right: 24px;
-    font-size: 1.2rem;
-  }
-    .read-more-arrow {
-    font-size: 4rem;
-    color: $color__link;
-    position: absolute;
-    bottom:20px;
-    right: 17px;
-    @include tablet{
-          bottom: 22px;
-    }
-    @include desktop {
-          bottom: 37px;
-    }
-  }
-}
-}
-
-//Single part
